--- a/app-food/src/main/resources/application.properties
+++ b/app-food/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+quarkus.http.port=9090
+
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=123456
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/food
-quarkus.hibernate-orm.database.generation=update
-#quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
 # RabbitMQ Configuration
