Codificação da avaliação.

--- a/app-food/src/main/resources/application.properties
+++ b/app-food/src/main/resources/application.properties
@@ -12,3 +12,7 @@ quarkus.hibernate-orm.log.sql=true
 mp.messaging.incoming.pedido-responses.connector=smallrye-rabbitmq
 mp.messaging.incoming.pedido-responses.address=pedido-responses
 mp.messaging.incoming.pedido-responses.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+mp.messaging.incoming.pedido-status-response.connector=smallrye-rabbitmq
+mp.messaging.incoming.pedido-status-response.address=pedido-status-loja-response
+mp.messaging.incoming.pedido-status-response.durable=true
