--- a/app-loja-2/src/main/resources/application.properties
+++ b/app-loja-2/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 quarkus.http.port=9092
 
+#docker pull mariadb
+#docker volume create mariadb_quarkus
+#docker run --name mariadb_quarkus -e MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=1 -d -p 3306:3306 -v mariadb_quarkus:/var/lib/mysql mariadb
 quarkus.datasource.db-kind=mariadb
 quarkus.datasource.username=root
 quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/loja02
@@ -7,6 +10,11 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
 # RabbitMQ Configuration
-mp.messaging.outcoming.pedido-responses.connector=smallrye-rabbitmq
-mp.messaging.outcoming.pedido-responses.address=pedido-responses
-mp.messaging.outcoming.pedido-responses.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.pedido-status-loja-request.connector=smallrye-rabbitmq
+mp.messaging.incoming.pedido-status-loja-request.address=pedido-status-loja-request
+
+mp.messaging.outgoing.pedido-status-loja-response.connector=smallrye-rabbitmq
+mp.messaging.outgoing.pedido-status-loja-response.address=pedido-status-response
+mp.messaging.outgoing.pedido-status-loja-response.durable=true
+#mp.messaging.outgoing.pedido-status-loja-response.address=pedido-status-loja-response
+#mp.messaging.outgoing.pedido-status-loja-response.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
