Versão final da avaliação.

--- a/app-food/src/main/resources/application.properties
+++ b/app-food/src/main/resources/application.properties
@@ -9,10 +9,16 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
 # RabbitMQ Configuration
+mp.messaging.outgoing.pedido-request.connector=smallrye-rabbitmq
+mp.messaging.outgoing.pedido-request.address=pedido-request
+mp.messaging.outgoing.pedido-request.durable=true
+mp.messaging.outgoing.pedido-request.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
 mp.messaging.incoming.pedido-responses.connector=smallrye-rabbitmq
 mp.messaging.incoming.pedido-responses.address=pedido-responses
 mp.messaging.incoming.pedido-responses.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-mp.messaging.incoming.pedido-status-response.connector=smallrye-rabbitmq
-mp.messaging.incoming.pedido-status-response.address=pedido-status-loja-response
-mp.messaging.incoming.pedido-status-response.durable=true
+#mp.messaging.incoming.pedido-status-loja-response.connector=smallrye-rabbitmq
+#mp.messaging.incoming.pedido-status-loja-response.address=pedido-status-loja-response
+#mp.messaging.incoming.pedido-status-loja-response.name=pedido-status-loja-response
+#mp.messaging.incoming.pedido-status-loja-response.durable=true
