--- a/app-loja-2/src/main/resources/application.properties
+++ b/app-loja-2/src/main/resources/application.properties
@@ -10,11 +10,14 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
 # RabbitMQ Configuration
-mp.messaging.incoming.pedido-status-loja-request.connector=smallrye-rabbitmq
-mp.messaging.incoming.pedido-status-loja-request.address=pedido-status-loja-request
+mp.messaging.incoming.pedido-request.connector=smallrye-rabbitmq
+mp.messaging.incoming.pedido-request.address=pedido-request
+mp.messaging.incoming.pedido-request.queue.name=pedido-request
+mp.messaging.incoming.pedido-request.exchange.name=pedido-request
+mp.messaging.incoming.pedido-request.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-mp.messaging.outgoing.pedido-status-loja-response.connector=smallrye-rabbitmq
-mp.messaging.outgoing.pedido-status-loja-response.address=pedido-status-response
-mp.messaging.outgoing.pedido-status-loja-response.durable=true
+#mp.messaging.incoming.pedido-status-loja-request.connector=smallrye-rabbitmq
+#mp.messaging.incoming.pedido-status-loja-request.address=pedido-status-loja-request
+#mp.messaging.outgoing.pedido-status-loja-response.connector=smallrye-rabbitmq
 #mp.messaging.outgoing.pedido-status-loja-response.address=pedido-status-loja-response
-#mp.messaging.outgoing.pedido-status-loja-response.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#mp.messaging.outgoing.pedido-status-loja-response.durable=true
